# ml-monitoring-lite

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
docs/: index.html
src/: drift.py
tests/: test_drift.py
